<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arrive</string>
    <string name="overview_title">Overview</string>
    <string name="add_destination_title">Add Destination</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="name_title">Name</string>
    <string name="stay_title">Stay</string>
    <string name="address_title">Address</string>
    <string name="arrival_title">Arrival</string>
    <string name="departure_title">Departure</string>
    <string name="google_search_title">Google Search</string>
    <string name="favorite_label">Pick Favorite</string>
    <string name="login_header">Login to Google Maps to access your bookmarks</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="places_search_title">Places Search</string>
    <string name="destination_schedule_title">Schedule</string>
    <string name="my_location_default">My location</string>
    <string name="destination_search_hint">Enter place or address</string>
    <string name="enter_search_query_here">Enter search query here</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="destination_search_button">destination search button</string>
    <string name="my_location_layout">current location area</string>
    <string name="my_location_icon">My location icon</string>
    <string name="add_destination_itinerary_item">Next destination</string>
    <string name="ok">OK</string>
    <string name="waiting_for_location">Waiting for location...</string>
    <string name="address_unknown">Address unknown</string>
</resources>
