<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="vertical" android:layout_weight="1" android:layout_height="0dp" android:layout_margin="5dp">
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_width="match_parent" android:weightSum="1" android:layout_weight="1">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/add_destination_title"></TextView>
            <LinearLayout android:layout_height="match_parent" android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_weight="1"></LinearLayout>
            <DigitalClock android:text="DigitalClock" android:layout_width="wrap_content" android:id="@+id/digitalClock1" android:layout_height="wrap_content"></DigitalClock>
        </LinearLayout>
        <Button android:layout_width="match_parent" android:layout_height="0dp" android:id="@+id/button1" android:layout_weight="1" android:text="@string/favorite_label"></Button>
        <LinearLayout android:layout_height="0dp" android:id="@+id/linearLayout4" android:layout_width="match_parent" android:layout_weight=".5"></LinearLayout>
        <Button android:layout_width="match_parent" android:layout_height="0dp" android:id="@+id/button2" android:text="@string/google_search_title" android:layout_weight="1"></Button>
        <LinearLayout android:layout_height="0dp" android:id="@+id/linearLayout6" android:layout_width="match_parent" android:layout_weight="1"></LinearLayout>
    </LinearLayout>
    
</LinearLayout>
